%% title: ERD 03a - Customer / Contract / Project / Delivery
%% Module: Project / Customer / Finance (part 1 of 2, see erd-03b-invoice-payment-ma.mmd for invoice/payment/MA renewal/MA ticket)

erDiagram
    direction LR

%%{init: {"theme": "base", "themeVariables": {"primaryColor": "#ffffff", "primaryBorderColor": "#000000", "primaryTextColor": "#000000", "lineColor": "#000000", "secondaryColor": "#ffffff", "tertiaryColor": "#ffffff"}, "er": {"diagramPadding": 8, "entityPadding": 12, "minEntityWidth": 90, "minEntityHeight": 40, "fontSize": 22}}}%%
    PM_CUSTOMER {
        UUID id
        UUID business_id
        varchar customer_code
        UUID upload_group_id
        varchar tax_id
        varchar company_name_en
        varchar company_name_local
        varchar contact_person
        varchar phone_number
        varchar email
        varchar line_id
        varchar address_en
        varchar address_local
        varchar zip_code
        varchar person_type
        boolean is_active
        text remark
        UUID province_id
        UUID district_id
        UUID sub_district_id
        varchar created_by
        timestamp created_date
        varchar updated_by
        timestamp updated_date
        boolean is_delete
        varchar delete_by
        timestamp delete_date
        int row_version
    }

    PM_CUSTOMER_CONTRACT {
        UUID id
        UUID business_id
        UUID customer_id
        varchar contract_no
        varchar contract_type
        date start_date
        date end_date
        decimal contract_value
        varchar sign_status
        boolean is_active
        varchar payment_terms
        text scope_summary
        varchar renewal_status
        UUID parent_contract_id
        UUID project_id
        varchar created_by
        timestamp created_date
        varchar updated_by
        timestamp updated_date
        boolean is_delete
        varchar delete_by
        timestamp delete_date
        int row_version
    }

    PM_CUSTOMER_PROJECT {
        UUID id
        UUID business_id
        UUID customer_id
        UUID contract_id
        varchar project_code
        varchar project_name
        date start_date
        date planned_end_date
        date actual_end_date
        int budget_manday
        int used_manday
        varchar status
        varchar priority
        text description
        boolean is_active
        varchar created_by
        timestamp created_date
        varchar updated_by
        timestamp updated_date
        boolean is_delete
        varchar delete_by
        timestamp delete_date
        int row_version
    }

    PM_DELIVERY {
        UUID id
        UUID business_id
        UUID project_id
        varchar delivery_code
        varchar delivery_title
        varchar delivery_type
        UUID contract_id
        UUID milestone_id
        date delivery_date
        varchar delivery_version
        text release_note
        text delivery_summary
        varchar status
        varchar pm_approved_by
        timestamp pm_approved_date
        varchar customer_signed_by
        timestamp customer_signed_date
        UUID attachment_group_id
        boolean is_locked
        varchar created_by
        timestamp created_date
        varchar updated_by
        timestamp updated_date
        boolean is_delete
        varchar delete_by
        timestamp delete_date
        int row_version
    }

    PM_DELIVERY_CHECKLIST {
        UUID id
        UUID delivery_id
        varchar item_name
        varchar item_category
        boolean is_checked
        varchar checked_by
        timestamp checked_date
        text remark
        int sort_order
        varchar created_by
        timestamp created_date
        varchar updated_by
        timestamp updated_date
        boolean is_delete
        varchar delete_by
        timestamp delete_date
        int row_version
    }

    PM_DELIVERY_ITEM {
        UUID id
        UUID delivery_id
        varchar item_type
        UUID item_id
        varchar item_code
        varchar item_title
        varchar item_status
        text remark
        int sort_order
        varchar created_by
        timestamp created_date
        varchar updated_by
        timestamp updated_date
        boolean is_delete
        varchar delete_by
        timestamp delete_date
        int row_version
    }

    %% ===== Relationships =====

    PM_CUSTOMER ||--o{ PM_CUSTOMER_CONTRACT : "has contracts"
    PM_CUSTOMER ||--o{ PM_CUSTOMER_PROJECT : "has projects"

    PM_CUSTOMER_CONTRACT ||--o{ PM_CUSTOMER_PROJECT : "governs (via project.contract_id)"
    PM_CUSTOMER_CONTRACT |o--o{ PM_CUSTOMER_CONTRACT : "renewed into (parent_contract_id)"
    PM_CUSTOMER_CONTRACT ||--o{ PM_DELIVERY : "covers"

    PM_CUSTOMER_PROJECT ||--o{ PM_CUSTOMER_CONTRACT : "may originate (contract.project_id)"
    PM_CUSTOMER_PROJECT ||--o{ PM_DELIVERY : "produces"

    PM_DELIVERY ||--o{ PM_DELIVERY_CHECKLIST : "checklist items"
    PM_DELIVERY ||--o{ PM_DELIVERY_ITEM : "included items"

